objects/CallPlanCallReportField__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AccountIdFieldId__c</fullName>
        <label>AccountIdFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLeadForSalesFieldId__c</fullName>
        <label>AccountLeadForSalesFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualVisitDateFieldId__c</fullName>
        <label>ActualVisitDateFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessCodeId__c</fullName>
        <label>BusinessCodeId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CISFieldId__c</fullName>
        <label>CISFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallPlanRecordTypeId__c</fullName>
        <label>CallPlanRecordTypeId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallReportObjectId__c</fullName>
        <label>CallReportObjectId</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallReportRecordTypeId__c</fullName>
        <label>CallReportRecordTypeId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactChannelFieldId__c</fullName>
        <label>ContactChannelFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Id__c</fullName>
        <label>Contact Person Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCallPlanRecordTypeId__c</fullName>
        <label>NewCallPlanRecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferCreditProductFieldId__c</fullName>
        <label>OfferCreditProductFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferInterestFieldId__c</fullName>
        <label>OfferInterestFieldId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryCallReportRecordTypeId__c</fullName>
        <label>SecondaryCallReportRecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Field_Id__c</fullName>
        <label>Status Field Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CallPlanCallReportField</label>
</CustomObject>